# bookie

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  build.gradle  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.run/: Bookie Backend.run.xml  Bookie Web.run.xml  Bookie.run.xml  Electron Dev.run.xml  Frontend Dev.run.xml  Tauri Dev.run.xml
backend/: build.gradle
diagrams/: architecture.drawio  erd.drawio
electron/: AGENTS.md  loading.html  main.cjs  package-lock.json  package.json
frontend/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.visual.config.js  tsconfig.json  vite.config.js  vitest.config.js
frontend/scripts/: prepare-backend-runtime.mjs
frontend/src/: App.jsx  constants.js  designTokens.js  index.css  integration.test.js  main.jsx  queryKeys.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/backend-runtime/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: api.integration.test.js  client.js  index.js
frontend/src/components/: CollapsibleBadges.jsx  ErrorBoundary.jsx  PageLoadingSkeleton.jsx  PendingExpenses.jsx  PendingItem.jsx  PendingItem.test.jsx  RentalEmails.jsx
frontend/src/hooks/: transactionPageUtils.js  transactionPageUtils.test.js  useBackendHealth.js  useExpensesPage.js  useIncomesPage.js  useListField.js  useListField.test.js  useOutlookStatus.js  usePageNavigationState.js  usePageNavigationState.test.jsx  useParseEmail.js  useParseEmail.test.jsx  useParseReceipt.js  useParseReceipt.test.jsx  usePendingQueue.js  usePendingQueue.test.jsx  usePendingSSE.js  usePendingSSE.test.js  useSaveExpense.js  useSaveExpense.test.jsx  useSaveIncome.js  useSaveIncome.test.jsx  useSessionState.js  useSessionState.test.js
frontend/src/pages/: Agent.jsx  Agent.test.jsx  Backup.jsx  Dashboard.jsx  Emails.jsx  Expenses.jsx  Expenses.test.jsx  ExpensesFilters.jsx  ExpensesForm.jsx  ExpensesPageContent.jsx  ExpensesTable.jsx  Inbox.jsx  Incomes.jsx  Incomes.test.jsx  IncomesFilters.jsx  IncomesForm.jsx  (+12 more)
frontend/visual-tests/: dashboard.visual.spec.js
(+275 files in other folders)
