[package]
name = "bookie"
version = "0.1.0"
description = "Bookie desktop application"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bookie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bookie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
