[package]
name = "bookie"
version = "0.1.0"
description = "Bookie desktop application"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bookie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bookie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
